# AI_Dev_3rd_Project

./: README.md  eda.ipynb
CHOI/: debug_preprocess_images.py  preprocess_images.py  preprocess_images_verified.py  pyproject.toml  run_sampling.py  train.ipynb  train.py  train_speedup.ipynb  train_speedup.py  train_speedup_emonet.ipynb  train_speedup_resnet18.ipynb  train_speedup_sufflenet.ipynb  train_팀원별모델분류.ipynb
CHOI/feellog/: docker-compose.yml  package-lock.json  package.json  requirements.txt  requirements_pytorch.txt
CHOI/feellog-project_01/: dataloader-check.ipynb  preprocess_images_v.2.0.py  pyproject.toml  requirements.txt  run_sampling.py  train.ipynb
CHOI/feellog-project_03/: README.md  analyzer.py  audio-finetune-study-v1.db  conda.yaml  main.py  pip_requirements.txt  preprocess_images_v.2.1.py  pyproject.toml  requirements.txt  sample_and_split_audio.py  train_audio.ipynb  train_audio.py  train_audio_split.py  train_emonet.ipynb  train_emonet_100.ipynb  train_emonet_50.ipynb  train_emonet_mlflow.ipynb  train_multimodal_mlflow.ipynb
CHOI/tests/: test_create_model.py  test_model.py
YEO/: .gitignore  0812_01_EDA시험.ipynb  0812_02_EDA_이미지bbox.ipynb  0817_01_PP_인물분리스플릿.ipynb  0817_01_PP_인물분리스플릿.py  README.md  preprocess_images.py  preprocess_images_hybrid.py  preprocess_images_v3.py  preprocess_images_verified.py  pyproject.toml  train.py  train_speedup_emonet_v2.ipynb  train_팀원별모델분류_mobile.ipynb  train_팀원별모델분류_v2.ipynb  train_팀원별모델분류_v2.py  train_팀원별모델분류_v2_efficient.ipynb  train_팀원별모델분류_v2_res18.ipynb  train_팀원별모델분류_v2_res50.ipynb  train_팀원별모델분류_v2_squeeze.ipynb  train_팀원별모델분류_v3_cl_res18.ipynb  train_팀원별모델분류_v8_검증.ipynb  v2_summary.md
YEO/tests/: 0812_01_EDA시험.ipynb  0812_02_EDA_이미지bbox.ipynb  0814_01_EDA_대비.ipynb  0818_01_EDA_라벨링분포합의.ipynb  0820_01_EDA_감정분류음성.ipynb  0821_01_EDA_감정태깅성인.ipynb  0822_01_EDA_감정분류음성3.ipynb  1차_전처리_파이프라인_구상.md  3_module_pipeline_design_v_1_2025_08_27.md  audio_preprocess.ipynb  audio_preprocess_v2.ipynb  readme_short_summary_for_git_hub.md  test_emotion_file_sampler.py  test_model.py  감정분류음성eda.md  감정태깅성인_1차2차통합.md  (+4 more)
(+186 files in other folders)
