[project]
name = "feellog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1", 
    "jupyterlab",
    "librosa",
    "matplotlib>=3.9.4",
    "numpy",
    "openai",
    "opencv-python-headless",
    "pandas>=2.3.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
