[project]
name = "feellog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "jupyterlab",
    "librosa",
    "numpy",
    "openai",
    "opencv-python-headless",
    "torch",
    "torchvision",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
